Fix errors, add more query functionality
